# hypermodern-python

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  noxfile.py  pyproject.toml
.github/workflows/: docker-publish.yaml
src/hypermodern/: app.py  wikipedia.py
tests/: conftest.py  test_app.py  test_wikipedia.py
