[tool.poetry]
name = "hypermodern"
version = "0.2.0"
description = ""
authors = ["Edson Samuel Jr <samuedson@gmail.com>"]
repository = "https://github.com/mstred/hypermodern-python"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
app = "hypermodern.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
